// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShippingMethod create/update consignment and change shipping method: dropdown open 1`] = `
<body>
  <div>
    <div
      class="descriptionLineContainer"
    >
      <dt
        class="descriptionTitle"
      >
        <button
          class="actionButton"
          id="shipping-method-button"
        >
          Add shipping
        </button>
        <div />
      </dt>
      <dd
        class="descriptionValue"
      >
        <span>
          $77.00
        </span>
      </dd>
    </div>
  </div>
  <div
    id="floating-ui-root"
  >
    <div
      class="overlay"
      style="position: fixed; overflow: auto; top: 0px; right: 0px; bottom: 0px; left: 0px;"
    >
      <div
        class="wrapper"
        style="position: absolute;"
      >
        <div
          class="wrapper dropdownBody"
        >
          <fieldset
            name="radio-field-1"
          >
            <div
              class="option"
            >
              <label
                class="label label"
                for="available-shipping-option-1"
              >
                <input
                  class="input"
                  id="available-shipping-option-1"
                  name="radio-field-1"
                  type="radio"
                />
                <div
                  class="radioLabel"
                >
                  <span>
                    Description One
                  </span>
                  <span
                    class="radioLabelCaption"
                  >
                    <span>
                      $55.00
                    </span>
                  </span>
                </div>
              </label>
            </div>
            <div
              class="option"
            >
              <label
                class="label label"
                for="available-shipping-option-2"
              >
                <input
                  class="input"
                  id="available-shipping-option-2"
                  name="radio-field-1"
                  type="radio"
                />
                <div
                  class="radioLabel"
                >
                  <span>
                    Description Two
                  </span>
                  <span
                    class="radioLabelCaption"
                  >
                    <span>
                      $66.00
                    </span>
                  </span>
                </div>
              </label>
            </div>
          </fieldset>
        </div>
        <div
          class="dropdownFooter"
        >
          <button
            class="wrapper fill secondary medium"
            type="button"
          >
            Close
          </button>
          <button
            class="wrapper fill primary medium"
            type="button"
          >
            Apply
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ShippingMethod create/update consignment and change shipping method: initial 1`] = `
<body>
  <div>
    <div
      class="descriptionLineContainer"
    >
      <dt
        class="descriptionTitle"
      >
        <button
          class="actionButton isDisabled"
          id="shipping-method-button"
        >
          Add shipping
        </button>
        <div>
          Your cart contains no products, please select some first.
        </div>
      </dt>
      <dd
        class="descriptionValue descriptionValueDisabled"
      >
        <span>
          $77.00
        </span>
      </dd>
    </div>
  </div>
  <div
    id="floating-ui-root"
  />
</body>
`;

exports[`ShippingMethod create/update consignment and change shipping method: shipping method selected 1`] = `
<body>
  <div>
    <div
      class="descriptionLineContainer"
    >
      <dt
        class="descriptionTitle"
      >
        <button
          class="actionButton"
          id="shipping-method-button"
        >
          Add shipping
        </button>
        <div />
      </dt>
      <dd
        class="descriptionValue"
      >
        <span>
          $77.00
        </span>
      </dd>
    </div>
  </div>
  <div
    id="floating-ui-root"
  />
</body>
`;
